--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-transformer-json": "^5.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-compare": "^3.2.2",
     "react-helmet": "^6.1.0",
     "react-slick": "^0.30.2"
   },
