--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "plop": "plop"
   },
   "dependencies": {
+    "framer-motion": "^12.7.3",
     "gatsby": "^5.13.3",
     "gatsby-adapter-netlify": "^1.1.3",
     "gatsby-source-filesystem": "^5.14.0",
